Fixed spacing in categories section

--- a/scss/_categories.scss
+++ b/scss/_categories.scss
@@ -2,8 +2,8 @@
 
     display: flex;
     flex-direction: column;
-
     @include home-article-style;
+    margin: 0;
 
     article {
         align-items: center;
